[package]
name = "concurrecny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dashmap = "6.0.1"
oneshot = "0.1.8"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros", "net", "time", "io-util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
